# gdp_forecast

./: CMakeLists.txt  LICENSE  README.md
gdp_forecast/: CMakeLists.txt  PVZ.txt  Readme.txt  bp1.cpp  bp2.cpp  bp3.cpp  bp4.cpp  bp5.cpp  bp6.cpp  cash.cpp  datapop.cpp  increase.cpp  main.cpp  neyout.cpp
gdp_forecast/kernel/: OB1.cpp  OB1.h  activat.cpp  activat.h  config.cpp  config.h  file.hpp  neyron.cpp  neyron.h  other.cpp  other.h  relu.hpp
gdp_forecast/kernel/nvidia/: nvidiadate.cu  nvidiadate.h
gdp_forecast/kernel/nvidia/cuda/: nvidiac.cu  nvidiac.h
gdp_forecast/neym/: ney1m.cpp  ney1m.h  ney2m.cpp  ney2m.h  ney3m.cpp  ney3m.h  ney4m.cpp  ney4m.h
gdp_forecast/neys/: ney1s.cpp  ney1s.h  ney2s.cpp  ney2s.h  ney3s.cpp  ney3s.h  ney4s.cpp  ney4s.h
